# Project-Hawkeye

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FIX.md  README.md  docker-compose.yml  spec.md  start.sh
Backend/: .dockerignore  .env.example  Dockerfile.api  main.py  pyproject.toml
Backend/agent/: __init__.py
Backend/agent/core/: __init__.py  ollama_runtime.py  service.py
Backend/agent/entrypoints/: cli.py
Backend/agent/examples/: sample_test_plan.json
Backend/agent/execution/: __init__.py  workflow.py
Backend/agent/models/: __init__.py  schemas.py  state.py
Backend/agent/storage/: __init__.py  artifacts.py
Backend/agent/utils/: __init__.py  redaction.py
Backend/api/: app.py  artifact_store.py  auth_middleware.py  auth_utils.py  celery_app.py  container_pool.py  crypto.py  database.py  db.py  github_checks.py  job_queue.py  main.py  models.py  redis_store.py  schemas.py  slack.py  tasks.py  tasks_beat.py  ws_manager.py
Backend/api/routes/: artifacts.py  auth.py  baselines.py  billing.py  environments.py  integrations.py  me.py  orgs.py  projects.py  runs.py  schedules.py  suites.py  test_cases.py  test_cases_crud.py  usage.py  vault.py  webhooks.py  ws.py
Backend/hawkeye_orchestrator/: __init__.py
Backend/hawkeye_orchestrator/sandbox_image/: Dockerfile  entrypoint.sh  novnc-index.html  supervisord.conf
Backend/hawkeye_sandbox/: README.md  __init__.py  cli.py  logger.py  mcp.json  mcp.py  sandbox.py
Backend/hawkeye_sandbox/examples/: spawn_all.py  spawn_all_and_write_mcp.py  spawn_one.py
Backend/hawkeye_sandbox/sandbox_image/: Dockerfile  launch_browser.py
Backend/orchestrator/: __main__.py
Backend/orchestrator/agent/: graph.py  prompt_builder.py
Backend/orchestrator/assertions/: engine.py
Backend/orchestrator/cdp/: session.py
Backend/orchestrator/cli/: main.py
Backend/orchestrator/db/: connection.py  schema.sql  store.py
Backend/orchestrator/eval/: __init__.py  metrics.py  report.py  runner.py
Backend/orchestrator/llm/: provider.py  rate_limiter.py
Backend/orchestrator/loader/: yaml_loader.py
Backend/orchestrator/mcp/: client.py  tool_adapter.py
Backend/orchestrator/models/: results.py  run_state.py  test_case.py
Backend/orchestrator/reporting/: report_generator.py
Backend/orchestrator/runner/: run_manager.py
Backend/orchestrator/test_cases/: _template.yaml  amazon_add_to_cart.yaml  books_toscrape_mystery.yaml  demoblaze_cart.yaml  hackernews_comments.yaml  quotes_toscrape_author.yaml  saucedemo_cart.yaml  temu_cart.yaml  the_internet_login.yaml  todomvc_react.yaml  wikipedia_search.yaml
Backend/orchestrator/tools/: assert_element_state.py  assert_network_request.py  assert_text_present.py  get_console_errors.py  get_network_log.py  report_step_result.py  schemas.py  scroll_page.py  tool_registry.py  wait_for_stable.py
Backend/orchestrator/trace/: collector.py  phoenix.py
Backend/orchestrator/vision/: figma_client.py  pixel_diff.py  (+1 more)
Backend/sandbox/: Dockerfile  entrypoint.sh  launch_chrome.sh  novnc-index.html  open_website.py  supervisord.conf  test.py
Backend/tests/: conftest.py
(+127 files in other folders)
