[project]
name = "project-hawkeye"
version = "0.1.0"
description = "AI-powered pre-deployment agentic testing platform"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "websockets>=13.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "langchain-nvidia-ai-endpoints>=1.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "arize-phoenix-otel>=0.16.1",
    "openinference-instrumentation-langchain>=0.1.63",
    "cryptography>=42.0.0",
    "croniter>=2.0.0",
    "python-dateutil>=2.9.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "freezegun>=1.4.0",
]
eval = [
    "opentelemetry-sdk>=1.24.0",
    "openinference-semantic-conventions>=0.1.9",
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-langchain>=0.1.0",
]

[project.scripts]
hawkeye = "orchestrator.cli.main:cli"
hawkeye-api = "api.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
markers = [
    "integration: requires running sandbox container",
    "e2e: requires Docker and Ollama running",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "hawkeye_sandbox", "api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
